# insta360_ros_driver_dev

./: CMakeLists.txt  README.md  setup.sh
config/: config.yaml  equirectangular.yaml
insta360_ros_driver/: tools.py
launch/: bringup.launch.py  bringup.launch.xml  imu_process.launch.py
scripts/: equirectangular.py  live_processing.py
src/: decoder.cpp  main.cpp
